# llmd

./: .gitignore  .gitmodules  CMakeLists.txt  make
cmake/: linux.cmake
examples/: CMakeLists.txt  common.h  generate.c  ipc.ini  llama_cpp_wizardlm.ini  llmd-ipc.c  pipeline.c
include/llmd/: client.h  driver_loader.h  generic.h  llama_cpp.h  server.h
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/llmd/: core.h
libs/core/src/: core.c
libs/ipc/include/llmd/ipc/: server.h
libs/ipc/src/: server.c
libs/llama_cpp/: CMakeLists.txt
libs/llama_cpp/src/: llama_cpp.c
libs/loader/include/llmd/: loader.h
libs/loader/src/: dynlib.h  dynlib_unix.c
libs/pipeline/: CMakeLists.txt
libs/pipeline/include/: lm_pipeline.h
libs/pipeline/include/lm_pipeline/: def.h  macro.h  sampling.h
libs/pipeline/src/: pipeline.c  sampling.c
libs/sampling/: CMakeLists.txt
libs/sampling/src/: pick.c  rng.c  transform.c
libs/utils/llmd/utils/: arena_allocator.h  buffer.h  host.h
projects/: CMakeLists.txt
projects/core/: CMakeLists.txt
projects/core/include/llmd/: core.h
projects/core/src/: core.c
projects/examples/: CMakeLists.txt  common.h  generate.c  llmd-ipc.c  local.c
projects/ipc/: CMakeLists.txt
projects/ipc/include/llmd/: ipc.h
projects/ipc/include/llmd/ipc/: client.h
projects/ipc/src/: client.c  common.h  ipc.c  server.c
projects/llama_cpp/: CMakeLists.txt
projects/llama_cpp/include/llmd/: llama_cpp.h
projects/llama_cpp/src/: llama_cpp.c
projects/loader/: CMakeLists.txt
projects/loader/include/llmd/: loader.h
projects/loader/src/: loader.c
projects/sampling/: CMakeLists.txt
projects/sampling/include/llmd/: sampling.h
projects/sampling/src/: filter.c  pick.c  ring_buf.c  rng.c  transform.c
projects/utils/llmd/utils/: buffer.h  khash.h
src/: CMakeLists.txt
src/common/: CMakeLists.txt  buffer.h  host.h
src/core/: CMakeLists.txt  core.c
src/llama_cpp/: CMakeLists.txt
src/utils/: CMakeLists.txt
src/utils/llmd/utils/: cfg.h
